# Solo-Engine

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/: CODEOWNERS
.github/workflows/: build.yml  linux_build.yml  macos_build.yml  multi_platform_build.yml  unit_tests.yml  windows_build.yml
app/: CMakeLists.txt  main.cpp
cmake/: Benchmarking.cmake  Doxygen.cmake  UnitTest.cmake
include/AIS/Messages/: baseMessage.h
include/AIS/Utilities/: NMEA_ASCII.h
include/Coordinates/: Geodetic.h  WorldCoordinates.h
include/Engine/: Engine.h
include/Math/: EulerAngles.h  Kinematics.h  Matrix.h  UnitConversions.h  Vector.h  WorldCoordinates.h
include/Particle/: Particle.h
scripts/: add_header_comment.py  license.txt
src/: CMakeLists.txt  Mainpage.md
src/AIS/: CMakeLists.txt
src/AIS/Messages/: baseMessage.cpp
src/Coordinates/: CMakeLists.txt  WorldCoordinates.cpp
src/Engine/: CMakeLists.txt  Engine.cpp
src/Math/: CMakeLists.txt  EulerAngles.cpp  Kinematics.cpp  Matrix.cpp  Vector.cpp  WorldCoordinates.cpp
src/Particle/: CMakeLists.txt  Particle.cpp
test/: CMakeLists.txt
test/AIS/: CMakeLists.txt
test/AIS/Utilities/: CMakeLists.txt  nmea_ascii_test.cpp
test/Coordinates/: CMakeLists.txt  CMakelists.txt  geodetic_test.cpp  world_coordinates_test.cpp
test/Engine/: CMakeLists.txt  engine_test.cpp
test/Math/: CMakeLists.txt  euler_angles_test.cpp  matrix_test.cpp  unit_conversion_test.cpp  vector_test.cpp
